Fix bug in delete command